# Ray_Tracer

./: CMakeLists.txt  Data.xlsx
src/Application/: Camera.cpp  Camera.h  Main.cpp  Object.cpp  Object.h  Ray.h  RayTracer.cpp  RayTracer.h  SphereObject.cpp  SphereObject.h
src/MCG/: MCG.h  MCG_GFX_Lib.cpp  MCG_GFX_Lib.h
